[tool.poetry]
name = "reemployct-data-entry"
version = "1.1.7"
description = "Automated entry of job application data into Connecticut's DOL ReEmployCT portal."
authors = ["Ariff Jeff <ariffjeff@icloud.com>"]
readme = "README.md"
packages = [{include = "reemployct_data_entry"}]
license = "AGPL-3.0-only"
repository = "https://github.com/ariffjeff/ReEmployCT-Data-Entry"
keywords = ["unemployment", "benefits"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "*"
pandas = "*"
selenium = "*"
cryptography = "*"
openpyxl = "*"
usaddress = "*"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
pytest = "^7.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
