[tool.poetry]
name = "reemployct-data-entry"
version = "2.0.5"
description = "Automated entry of job application data into Connecticut's DOL ReEmployCT portal."
authors = ["Ariff Jeff <ariffjeff@icloud.com>"]
readme = "README.md"
packages = [{include = "reemployct_data_entry"}]
license = "AGPL-3.0-only"
repository = "https://github.com/ariffjeff/ReEmployCT-Data-Entry"
keywords = ["unemployment", "benefits"]

[tool.poetry.dependencies]
python = "^3.10.10"
colorama = "^0.4.6"
pandas = "^1.5.3"
selenium = "^4.8.2"
cryptography = "^39.0.2"
openpyxl = "^3.1.1"
usaddress = "^0.5.10"
pwinput = "^1.0.2"
requests = "^2.28.2"
packaging = "^23.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "*"
pytest = "^7.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
